[gd_scene load_steps=14 format=3 uid="uid://ebrsgm7rurl8"]

[ext_resource type="Script" path="res://scripts/GlobalUI.gd" id="1_86iux"]
[ext_resource type="Texture2D" uid="uid://cd858h7h2b0dm" path="res://assets/gamescreen.png" id="2_0t1ga"]
[ext_resource type="Script" path="res://scenes/Sounds.gd" id="3_ybg51"]
[ext_resource type="AudioStream" uid="uid://bkk5y2vr0kpys" path="res://assets/sounds/1gem.wav" id="4_moldm"]
[ext_resource type="AudioStream" uid="uid://f801b8773goa" path="res://assets/sounds/2gems.wav" id="5_rbdw0"]
[ext_resource type="AudioStream" uid="uid://ct8lc730vltxa" path="res://assets/sounds/movement.wav" id="6_rfofc"]
[ext_resource type="AudioStream" uid="uid://dkcnit45hi8lc" path="res://assets/sounds/non_movement.wav" id="7_132p7"]
[ext_resource type="Script" path="res://scripts/puzzle_puzzle/puzzle_game.gd" id="8_siott"]
[ext_resource type="Texture2D" uid="uid://dhxif7p0k0dpu" path="res://assets/sprites/gems.png" id="9_55dvd"]
[ext_resource type="PackedScene" uid="uid://d0jotk8mcuwdc" path="res://scenes/Music.tscn" id="10_kyycf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vurfj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gfvpd"]
texture = ExtResource("9_55dvd")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ntj6q"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_gfvpd")

[node name="PuzzleGame" type="Node2D"]

[node name="PuzzleHUD" type="CanvasLayer" parent="."]
layer = 0

[node name="Experiments" type="Label" parent="PuzzleHUD"]
offset_left = 288.0
offset_top = 208.0
offset_right = 512.0
offset_bottom = 231.0
text = "Target
"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PuzzleHUD"]
offset_left = 848.0
offset_top = 416.0
offset_right = 960.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
text = "Place - Spacebar        
Rotate - R  
Move - W, A, S, D       
Undo - X
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlobalUi" type="Node2D" parent="."]
script = ExtResource("1_86iux")

[node name="Sprite2D" type="Sprite2D" parent="GlobalUi"]
position = Vector2(512, 256)
scale = Vector2(2.048, 2.048)
texture = ExtResource("2_0t1ga")
metadata/_edit_lock_ = true

[node name="Main Menu" type="Button" parent="GlobalUi"]
offset_left = 576.0
offset_top = 432.0
offset_right = 840.0
offset_bottom = 463.0
text = "Main Menu"

[node name="Reset" type="Button" parent="GlobalUi"]
offset_left = 576.0
offset_top = 472.0
offset_right = 840.0
offset_bottom = 503.0
text = "Reset
"

[node name="Sounds" type="Node" parent="GlobalUi"]
script = ExtResource("3_ybg51")

[node name="one_gem" type="AudioStreamPlayer" parent="GlobalUi/Sounds"]
stream = ExtResource("4_moldm")

[node name="two_gems" type="AudioStreamPlayer" parent="GlobalUi/Sounds"]
stream = ExtResource("5_rbdw0")

[node name="movement" type="AudioStreamPlayer" parent="GlobalUi/Sounds"]
stream = ExtResource("6_rfofc")

[node name="nonmovement" type="AudioStreamPlayer" parent="GlobalUi/Sounds"]
stream = ExtResource("7_132p7")

[node name="PuzzleBoard" type="Node2D" parent="."]
position = Vector2(608, 64)
script = ExtResource("8_siott")

[node name="ColorRect4" type="ColorRect" parent="PuzzleBoard"]
offset_left = -320.0
offset_top = -32.0
offset_right = -96.0
offset_bottom = 208.0
color = Color(0, 0.454902, 0.372549, 0.556863)

[node name="ColorRect2" type="ColorRect" parent="PuzzleBoard"]
offset_left = -576.0
offset_top = -32.0
offset_right = -352.0
offset_bottom = 416.0
color = Color(0, 0.454902, 0.372549, 0.556863)

[node name="ColorRect3" type="ColorRect" parent="PuzzleBoard"]
offset_left = -320.0
offset_top = 256.0
offset_right = -96.0
offset_bottom = 416.0
color = Color(0, 0.454902, 0.372549, 0.556863)

[node name="Experiments3" type="Label" parent="PuzzleBoard"]
offset_left = -576.0
offset_top = 368.0
offset_right = -352.0
offset_bottom = 391.0
text = "Queue"
horizontal_alignment = 1

[node name="Dark Overlay" type="Panel" parent="PuzzleBoard"]
visible = false
offset_left = -576.0
offset_top = -64.0
offset_right = 448.0
offset_bottom = 448.0

[node name="Light Overlay" type="Panel" parent="PuzzleBoard"]
visible = false
offset_left = 16.0
offset_top = 16.0
offset_right = 368.0
offset_bottom = 368.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vurfj")

[node name="TileMap" type="TileMap" parent="PuzzleBoard"]
visibility_layer = 7
tile_set = SubResource("TileSet_ntj6q")
rendering_quadrant_size = 32
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(655360, 262144, 0, 10, 262144, 0, -1, 262144, 0, 65535, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, -65536, 262144, 0, -65535, 262144, 0, 655361, 262144, 0, -65534, 262144, 0, 655362, 262144, 0, -65533, 262144, 0, 655363, 262144, 0, -65532, 262144, 0, 655364, 262144, 0, -65531, 262144, 0, 655365, 262144, 0, -65530, 262144, 0, 655366, 262144, 0, -65529, 262144, 0, 655367, 262144, 0, -65528, 262144, 0, 655368, 262144, 0, -65527, 262144, 0, 655369, 262144, 0, -65526, 262144, 0, 65546, 262144, 0, 131082, 262144, 0, 196618, 262144, 0, 262154, 262144, 0, 327690, 262144, 0, 393226, 262144, 0, 458762, 262144, 0, 524298, 262144, 0, 589834, 262144, 0, 655370, 262144, 0)
layer_1/name = "board"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "piece"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()
metadata/_edit_lock_ = true

[node name="Level" type="Label" parent="PuzzleBoard"]
offset_left = -320.0
offset_top = 288.0
offset_right = -96.0
offset_bottom = 343.0
theme_override_font_sizes/font_size = 40
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebounceTimer" type="Timer" parent="PuzzleBoard"]
one_shot = true

[node name="PlacePieceOnBoardTimer" type="Timer" parent="PuzzleBoard"]
one_shot = true

[node name="LevelCompleteTimer" type="Timer" parent="PuzzleBoard"]
one_shot = true

[node name="Experiments" type="Label" parent="PuzzleBoard"]
offset_left = -320.0
offset_top = 368.0
offset_right = -96.0
offset_bottom = 391.0
text = "Level"
horizontal_alignment = 1

[node name="AudioStreamPlayer" parent="." instance=ExtResource("10_kyycf")]
stream_paused = false

[connection signal="pressed" from="GlobalUi/Main Menu" to="GlobalUi" method="_on_main_menu_pressed"]
[connection signal="pressed" from="GlobalUi/Reset" to="GlobalUi" method="_on_reset_pressed"]
[connection signal="pressed" from="GlobalUi/Reset" to="PuzzleBoard" method="_on_reset_pressed"]
[connection signal="timeout" from="PuzzleBoard/DebounceTimer" to="PuzzleBoard" method="_on_debounce_timer_timeout"]
[connection signal="timeout" from="PuzzleBoard/PlacePieceOnBoardTimer" to="PuzzleBoard" method="_on_place_piece_on_board_timer_timeout"]
[connection signal="timeout" from="PuzzleBoard/LevelCompleteTimer" to="PuzzleBoard" method="_on_level_complete_timer_timeout"]
